force-app/main/default/objects/WhatsApp_Session__c/WhatsApp_Session__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Session</label>
    <nameField>
        <displayFormat>WA-Chat-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>