force-app/main/default/objects/WhatsApp_Session__c/fields/Last_Used__c.field-meta.xml
<CustomField>
    <fullName>Last_Used__c</fullName>
    <label>Last Used</label>
    <type>DateTime</type>
</CustomField>