force-app/main/default/objects/WhatsApp_Session__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <externalId>true</externalId>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>